--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" type="image" href="./src/assets/LOGO.png" />
+    <link rel="shortcut icon" type="image" href="./src/assets/fav_ico.png" />
     <title>MyAssembly.co</title>
   </head>
   <body>
