--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="my-app-dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" type="image" href="./src/assets/fav_ico.png" />
     <title>MyAssembly.co</title>
   </head>
-  <body>
+  <body class="my-app-dark">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
     <!-- Googel OAuth -->
